[package]
name = "game_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.30"
futures-timer = "3.0.2"
tokio = { version = "1.35.1", features = ["full"] }
